--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section class="gallery">
             <div class="image-container">
                 <img src="image1.jpg" alt="Michael Kors ">
-                <p>Michael Kors male casual</p>
+                <p>Michael Kors male casual1</p>
             </div>
             <div class="image-container">
                 <img src="image2.jpg" alt="Michael Kors ">
