--- a/index.html
+++ b/index.html
@@ -3,34 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael Kors</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1>Welcome to Michael Kors</h1>
-        <p>Discover our latest collections of luxury accessories and ready-to-wear.</p>
-    </header>
-    
-    <main>
-        <section class="gallery">
-            <div class="image-container">
-                <img src="image1.jpg" alt="Michael Kors ">
-                <p>Michael Kors male casual1</p>
-            </div>
-            <div class="image-container">
-                <img src="image2.jpg" alt="Michael Kors ">
-                <p>Michael Kors female</p>
-            </div>
-            <div class="image-container">
-                <img src="image3.webp" alt="Michael Kors ">
-                <p>Michael Kors male</p>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 Michael Kors. All rights reserved.</p>
-    </footer>
+    <h1>this is fsd internal</h1>
 </body>
 </html>
